# OOPLabs

./: .gitmodules  OOPLab1.cpp  OOPLab1.h  list.cpp  list.h
Lab1/: CMakeLists.txt  README.md  functions.cpp
Lab2/: CMakeLists.txt  main.cpp
Lab2/Lab2Lib/: CMakeLists.txt  OOPLab2.cpp  OOPLab2.hpp
Lab2/LabTests/: CMakeLists.txt
Lab2/LabTests/basic_tests/: CMakeLists.txt  VerzieraTest.cpp
Lab3/: .gitignore  CMakeLists.txt  main.cpp
Lab3/lib/: CMakeLists.txt  Lab3.cpp  Lab3.hpp  PolygonWithOperators.cpp
Lab3/lib/DynamicPolygon/: CMakeLists.txt  DynamicPolygon.cpp  DynamicPolygon.hpp
Lab3/lib/DynamicPolygon/DialogLib/: CMakeLists.txt  dialog.hpp
Lab3/lib/DynamicPolygon/MathLib/: CMakeLists.txt  math.cpp  math.hpp
Lab3/lib/PolygonWithOperators/: CMakeLists.txt  PolygonWithOperators.cpp  PolygonWithOperators.hpp
Lab3/lib/PolygonWithOperators/DialogLib/: CMakeLists.txt  dialog.hpp
Lab3/lib/PolygonWithOperators/MathLib/: CMakeLists.txt  math.cpp  math.hpp
Lab3/lib/SimplePolygon/: CMakeLists.txt  Lab3.hpp  Polygon.hpp  SimplePolygon.cpp  SimplePolygon.hpp
Lab3/lib/SimplePolygon/DialogLib/: CMakeLists.txt  dialog.cpp  dialog.hpp
Lab3/lib/SimplePolygon/MathLib/: CMakeLists.txt  math.cpp  math.hpp
Lab3/tests/: CMakeLists.txt
Lab3/tests/unit_tests/: CMakeLists.txt  SimplePolygonTest.cpp
Lab3/tests/unit_tests/DynamicPolygonTests/: CMakeLists.txt  DynamicPolygonTest.cpp
Lab3/tests/unit_tests/PolygonWithOperatorsTests/: CMakeLists.txt  PolygonWithOperatorsTest.cpp
Lab3/tests/unit_tests/SimplePolygonTests/: CMakeLists.txt  SimplePolygonTest.cpp
