cmake_minimum_required(VERSION 3.22)
project(PolygonWithOperators)

set(POLYGON_WITH_OPER_FILES PolygonWithOperators.cpp)
include_directories(MathLib)
include_directories(DialogLib)
add_subdirectory(DialogLib)
add_subdirectory(MathLib)
add_library(PolygonWithOperators STATIC ${POLYGON_WITH_OPER_FILES})
target_link_libraries(PolygonWithOperators DialogLib_1 MathLib_1)